--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import "https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Raleway:wght@400;500;700;900&display=swap";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css";
 header {
-  background-image: url("/img/bg/bg_1st-screen.png");
+  background-image: url(../img/bg/bg_1st-screen.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -35,10 +35,15 @@ header::after {
   padding: 29px 0 29px;
   border-bottom: 1px solid #babbc5;
 }
+@media (max-width: 992px) {
+  .header-wrap {
+    padding: 20px 0 20px;
+  }
+}
 
 .header-logo {
   margin: 0 15px;
-  font-size: 30px;
+  font-size: 1.8rem;
   color: #ffffff;
   text-transform: uppercase;
 }
@@ -51,8 +56,23 @@ header::after {
 }
 
 .header-navigation {
-  width: 600px;
+  width: 550px;
   margin: 0 15px;
+}
+@media (max-width: 1200px) {
+  .header-navigation {
+    width: 550px;
+  }
+}
+@media (max-width: 992px) {
+  .header-navigation {
+    width: 500px;
+  }
+}
+@media (max-width: 762px) {
+  .header-navigation {
+    width: 50px;
+  }
 }
 .header-navigation-list {
   display: -webkit-box;
@@ -67,6 +87,11 @@ header::after {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+@media (max-width: 762px) {
+  .header-navigation-list {
+    display: none;
+  }
+}
 
 .navigation__item {
   font-size: 0.8rem;
@@ -76,20 +101,116 @@ header::after {
   text-transform: uppercase;
 }
 
+.header-burger {
+  border: 1px solid #fff;
+  padding: 15px 10px;
+  display: none;
+  cursor: pointer;
+}
+@media (max-width: 762px) {
+  .header-burger {
+    display: block;
+  }
+}
+
+.header-burger span {
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+  margin: auto;
+  position: relative;
+}
+
+.header-burger span::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 7px;
+  left: 0;
+}
+
+.header-burger span::after {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  top: 7px;
+  left: 0;
+}
+
 .first-screen-wrap {
   padding: 120px 0 120px;
+}
+@media (max-width: 1200px) {
+  .first-screen-wrap {
+    padding: 100px 0;
+  }
+}
+@media (max-width: 992px) {
+  .first-screen-wrap {
+    padding: 80px 0;
+  }
+}
+@media (max-width: 762px) {
+  .first-screen-wrap {
+    padding: 70px 0;
+  }
+}
+@media (max-width: 468px) {
+  .first-screen-wrap {
+    padding: 60px 0;
+  }
+}
+@media (max-width: 320px) {
+  .first-screen-wrap {
+    padding: 50px 0;
+  }
 }
 
 .first-screen-title {
   width: auto;
   margin: auto;
   text-align: center;
-  font-size: 4rem;
-  line-height: 4.75rem;
+  font-size: 3.5rem;
+  line-height: 4rem;
   color: white;
   text-transform: uppercase;
   font-weight: 900;
   margin-bottom: 32px;
+}
+@media (max-width: 1200px) {
+  .first-screen-title {
+    font-size: 3.3rem;
+    line-height: 3.5rem;
+  }
+}
+@media (max-width: 992px) {
+  .first-screen-title {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
+}
+@media (max-width: 762px) {
+  .first-screen-title {
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+}
+@media (max-width: 468px) {
+  .first-screen-title {
+    font-size: 2.5rem;
+    line-height: 2.8rem;
+  }
+}
+@media (max-width: 320px) {
+  .first-screen-title {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
 }
 
 .first-screen-description {
@@ -102,19 +223,56 @@ header::after {
   font-weight: 400;
   margin-bottom: 82px;
 }
+@media (max-width: 992px) {
+  .first-screen-description {
+    margin-bottom: 70px;
+  }
+}
+@media (max-width: 762px) {
+  .first-screen-description {
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 468px) {
+  .first-screen-description {
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 320px) {
+  .first-screen-description {
+    margin-bottom: 40px;
+    font-size: 1.3rem;
+    line-height: 1.4rem;
+  }
+}
 
 .first-screen-btn {
-  font-size: 1.5rem;
-  line-height: 1.75rem;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
   color: #ffffff;
   font-weight: 900;
   text-transform: uppercase;
   display: block;
-  width: 369px;
+  width: 330px;
   margin: auto;
   text-align: center;
   padding: 20px 0;
   background-color: #ff4343;
+}
+@media (max-width: 762px) {
+  .first-screen-btn {
+    width: 300px;
+  }
+}
+@media (max-width: 468px) {
+  .first-screen-btn {
+    width: 270px;
+  }
+}
+@media (max-width: 320px) {
+  .first-screen-btn {
+    width: 240px;
+  }
 }
 
 .advantages-wrap {
@@ -124,12 +282,20 @@ header::after {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  /* align-items: flex-start; */
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-line-pack: stretch;
       align-content: stretch;
   margin: 0 -15px;
+}
+@media (max-width: 992px) {
+  .advantages-wrap {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 
 .advantages-card {
@@ -144,6 +310,30 @@ header::after {
 }
 .advantages-card:nth-child(6) {
   margin-bottom: 0;
+}
+@media (max-width: 992px) {
+  .advantages-card {
+    width: 40%;
+    margin: 0 15px 60px;
+  }
+  .advantages-card:nth-child(5) {
+    display: none;
+  }
+  .advantages-card:nth-child(6) {
+    display: none;
+  }
+  .advantages-card:nth-child(3) {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 673px) {
+  .advantages-card {
+    width: 80%;
+    margin: 0 15px 50px;
+  }
+  .advantages-card:nth-child(4) {
+    display: none;
+  }
 }
 .advantages-card__image {
   width: 100px;
@@ -321,14 +511,54 @@ header::after {
       flex-wrap: wrap;
   margin: 0 -15px;
 }
+@media (max-width: 1200px) {
+  .person-wrap {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
 
 .person-card {
   width: 260px;
   margin: 0 15px;
 }
+@media (max-width: 1200px) {
+  .person-card {
+    width: 300px;
+  }
+  .person-card:nth-child(1) {
+    margin-bottom: 30px;
+  }
+  .person-card:nth-child(2) {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 733px) {
+  .person-card {
+    width: 260px;
+  }
+}
+@media (max-width: 644px) {
+  .person-card {
+    width: 300px;
+  }
+  .person-card:nth-child(4) {
+    display: none;
+  }
+}
+@media (max-width: 420px) {
+  .person-card {
+    width: 260px;
+  }
+}
+@media (max-width: 320px) {
+  .person-card {
+    width: 240px;
+  }
+}
 
 .person__image {
-  width: 260px;
+  width: 100%;
   height: 175px;
   overflow: hidden;
   display: -webkit-box;
@@ -353,6 +583,11 @@ header::after {
   margin-bottom: 5px;
   color: #2d3033;
 }
+@media (max-width: 644px) {
+  .person__title {
+    text-align: center;
+  }
+}
 
 .person__subtitle {
   font-size: 1.12rem;
@@ -361,12 +596,28 @@ header::after {
   margin-bottom: 17px;
   font-weight: 400;
 }
+@media (max-width: 644px) {
+  .person__subtitle {
+    text-align: center;
+  }
+}
 
 .person__text {
   font-size: 1.12rem;
   color: #6c7279;
   font-weight: 400;
   margin-bottom: 37px;
+}
+@media (max-width: 644px) {
+  .person__text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 644px) {
+  .person__social-icons {
+    text-align: center;
+  }
 }
 
 .person__social-icons i {
@@ -378,6 +629,11 @@ header::after {
   color: #c6cbcd;
   border: 1px solid #c6cbcd;
   margin-right: 20px;
+}
+@media (max-width: 644px) {
+  .person__social-icons i {
+    margin: 0 10px;
+  }
 }
 
 .slider-wrap {
@@ -415,9 +671,18 @@ header::after {
   display: flex;
 }
 
+.slider__item img {
+  width: 50%;
+}
+@media (max-width: 785px) {
+  .slider__item img {
+    width: 100%;
+  }
+}
+
 .slider__description {
   background-color: #5c3249;
-  width: auto;
+  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -427,7 +692,32 @@ header::after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 7em;
+  padding: 0 110px;
+}
+@media (max-width: 1200px) {
+  .slider__description {
+    padding: 0 80px;
+  }
+}
+@media (max-width: 1100px) {
+  .slider__description {
+    padding: 0 60px;
+  }
+}
+@media (max-width: 1000px) {
+  .slider__description {
+    padding: 0 50px;
+  }
+}
+@media (max-width: 992px) {
+  .slider__description {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 785px) {
+  .slider__description {
+    display: none;
+  }
 }
 .slider__description p {
   font-size: 2.1rem;
@@ -435,6 +725,21 @@ header::after {
   font-family: "Cardo";
   font-weight: 400;
   text-transform: capitalize;
+}
+@media (max-width: 1120px) {
+  .slider__description p {
+    font-size: 1.9rem;
+  }
+}
+@media (max-width: 1020px) {
+  .slider__description p {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 992px) {
+  .slider__description p {
+    font-size: 1.5rem;
+  }
 }
 .slider__description span {
   display: block;
@@ -529,12 +834,62 @@ header::after {
   text-align: center;
   cursor: pointer;
 }
+@media (max-width: 762px) {
+  .ready-button {
+    width: 300px;
+    padding: 15px 0;
+  }
+}
+@media (max-width: 598px) {
+  .ready-button {
+    width: 280px;
+    padding: 15px 0;
+  }
+}
+@media (max-width: 468px) {
+  .ready-button {
+    width: 260px;
+    padding: 15px 0;
+  }
+}
+@media (max-width: 422px) {
+  .ready-button {
+    width: 240px;
+    padding: 10px 0;
+  }
+}
+@media (max-width: 350px) {
+  .ready-button {
+    width: 230px;
+    padding: 10px 0;
+  }
+}
 
 .ready-button-download {
   text-transform: uppercase;
   color: #ffffff;
   font-size: 1.5rem;
   font-weight: 900;
+}
+@media (max-width: 762px) {
+  .ready-button-download {
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 598px) {
+  .ready-button-download {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 422px) {
+  .ready-button-download {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 350px) {
+  .ready-button-download {
+    font-size: 1rem;
+  }
 }
 
 .upper-footer {
@@ -550,9 +905,47 @@ header::after {
   background-color: #353c65;
   padding: 71px 0;
 }
+@media (max-width: 992px) {
+  .upper-footer {
+    padding: 60px 0;
+  }
+}
+@media (max-width: 763px) {
+  .upper-footer {
+    padding: 55px 0;
+  }
+}
+@media (max-width: 506px) {
+  .upper-footer {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 468px) {
+  .upper-footer {
+    padding: 40px 0;
+  }
+}
 
 .upper-footer__item {
   width: 24.5033112583%;
+}
+@media (max-width: 763px) {
+  .upper-footer__item {
+    width: 250px;
+  }
+  .upper-footer__item:last-child {
+    display: none;
+  }
+}
+@media (max-width: 506px) {
+  .upper-footer__item {
+    width: 200px;
+  }
+}
+@media (max-width: 435px) {
+  .upper-footer__item:nth-child(1) {
+    display: none;
+  }
 }
 
 .upper-footer__title {
@@ -575,8 +968,17 @@ header::after {
   text-align: center;
   font-size: 1.5rem;
   color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
-
+@media (max-width: 992px) {
+  .upper-footer__social-icons {
+    /* font-size: 1.3rem; */
+  }
+}
 .upper-footer__social-icons a {
   color: #ffffff;
 }
@@ -588,6 +990,12 @@ header::after {
   border: 1px solid #ffffff;
   padding-top: 6px;
 }
+@media (max-width: 992px) {
+  .upper-footer__social-icons i {
+    /*    width: 32px;
+    height: 32px; */
+  }
+}
 
 .lower-footer {
   padding: 24px 0;
@@ -597,6 +1005,32 @@ header::after {
 .lower-footer__text {
   width: 30%;
   margin: auto;
+}
+@media (max-width: 1201px) {
+  .lower-footer__text {
+    width: 40%;
+  }
+}
+@media (max-width: 901px) {
+  .lower-footer__text {
+    width: 50%;
+  }
+}
+@media (max-width: 722px) {
+  .lower-footer__text {
+    width: 60%;
+  }
+}
+@media (max-width: 613px) {
+  .lower-footer__text {
+    width: 70%;
+    padding: 15px 0;
+  }
+}
+@media (max-width: 516px) {
+  .lower-footer__text {
+    width: 90%;
+  }
 }
 
 .lower-footer__text p {
@@ -613,6 +1047,31 @@ header::after {
 
 html {
   font-family: "Raleway", "Cardo", serif;
+}
+@media (max-width: 1200px) {
+  html html {
+    font-size: 16px;
+  }
+}
+@media (max-width: 992px) {
+  html html {
+    font-size: 15px;
+  }
+}
+@media (max-width: 762px) {
+  html html {
+    font-size: 14px;
+  }
+}
+@media (max-width: 468px) {
+  html html {
+    font-size: 13px;
+  }
+}
+@media (max-width: 320px) {
+  html html {
+    font-size: 12px;
+  }
 }
 
 * {
@@ -631,8 +1090,58 @@ html {
   position: relative;
   z-index: 1;
 }
+@media (max-width: 1200px) {
+  .container {
+    max-width: 970px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+@media (max-width: 762px) {
+  .container {
+    max-width: 90%;
+  }
+}
+@media (max-width: 468px) {
+  .container {
+    max-width: 90%;
+  }
+}
+@media (max-width: 320px) {
+  .container {
+    max-width: 100%;
+  }
+}
 
 section {
   padding: 114px 0;
   background-color: #e5e5e5;
+}
+@media (max-width: 1200px) {
+  section {
+    padding: 100px 0;
+  }
+}
+@media (max-width: 992px) {
+  section {
+    padding: 80px 0;
+  }
+}
+@media (max-width: 762px) {
+  section {
+    padding: 70px 0;
+  }
+}
+@media (max-width: 468px) {
+  section {
+    padding: 55px 0;
+  }
+}
+@media (max-width: 320px) {
+  section {
+    padding: 50px 0;
+  }
 }
