--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,5 @@
 header {
-  background-image: url("/img/bg/bg_1st-screen.png");
+  background-image: url(../img/bg/bg_1st-screen.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -24,10 +24,13 @@ header {
   margin: 0 -15px;
   padding: 29px 0 29px;
   border-bottom: 1px solid $border-header;
+  @media (max-width: 992px) {
+    padding: 20px 0 20px;
+  }
 }
 .header-logo {
   margin: 0 15px;
-  font-size: 30px;
+  font-size: 1.8rem;
   color: $white;
   text-transform: uppercase;
   &::before {
@@ -39,14 +42,26 @@ header {
   }
 }
 .header-navigation {
-  width: 600px;
+  width: 550px;
   margin: 0 15px;
+  @media (max-width: 1200px) {
+    width: 550px;
+  }
+  @media (max-width: 992px) {
+    width: 500px;
+  }
+  @media (max-width: 762px) {
+    width: 50px;
+  }
 
   &-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    @media (max-width: 762px) {
+      display: none;
+    }
   }
 }
 .navigation__item {
@@ -57,19 +72,93 @@ header {
   text-transform: uppercase;
 }
 
+.header-burger {
+  border: 1px solid #fff;
+  padding: 15px 10px;
+  display: none;
+  cursor: pointer;
+
+  @media (max-width: 762px) {
+    display: block;
+  }
+}
+.header-burger span {
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+  margin: auto;
+  position: relative;
+}
+
+.header-burger span::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 7px;
+  left: 0;
+}
+.header-burger span::after {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  top: 7px;
+  left: 0;
+}
+
 .first-screen-wrap {
   padding: 120px 0 120px;
+
+  @media (max-width: 1200px) {
+    padding: 100px 0;
+  }
+  @media (max-width: 992px) {
+    padding: 80px 0;
+  }
+  @media (max-width: 762px) {
+    padding: 70px 0;
+  }
+  @media (max-width: 468px) {
+    padding: 60px 0;
+  }
+  @media (max-width: 320px) {
+    padding: 50px 0;
+  }
 }
 .first-screen-title {
   width: auto;
   margin: auto;
   text-align: center;
-  font-size: 4rem;
-  line-height: 4.75rem;
+  font-size: 3.5rem;
+  line-height: 4rem;
   color: white;
   text-transform: uppercase;
   font-weight: 900;
   margin-bottom: 32px;
+  @media (max-width: 1200px) {
+    font-size: 3.3rem;
+    line-height: 3.5rem;
+  }
+  @media (max-width: 992px) {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
+  @media (max-width: 762px) {
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+  @media (max-width: 468px) {
+    font-size: 2.5rem;
+    line-height: 2.8rem;
+  }
+  @media (max-width: 320px) {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
 }
 .first-screen-description {
   width: auto;
@@ -80,17 +169,40 @@ header {
   color: white;
   font-weight: 400;
   margin-bottom: 82px;
+  @media (max-width: 992px) {
+    margin-bottom: 70px;
+  }
+  @media (max-width: 762px) {
+    margin-bottom: 60px;
+  }
+  @media (max-width: 468px) {
+    margin-bottom: 50px;
+  }
+  @media (max-width: 320px) {
+    margin-bottom: 40px;
+    font-size: 1.3rem;
+    line-height: 1.4rem;
+  }
 }
 .first-screen-btn {
-  font-size: 1.5rem;
-  line-height: 1.75rem;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
   color: $white;
   font-weight: 900;
   text-transform: uppercase;
   display: block;
-  width: 369px;
+  width: 330px;
   margin: auto;
   text-align: center;
   padding: 20px 0;
   background-color: $red;
+  @media (max-width: 762px) {
+    width: 300px;
+  }
+  @media (max-width: 468px) {
+    width: 270px;
+  }
+  @media (max-width: 320px) {
+    width: 240px;
+  }
 }
