--- a/src/scss/person.scss
+++ b/src/scss/person.scss
@@ -4,14 +4,41 @@
   align-items: flex-start;
   flex-wrap: wrap;
   margin: 0 -15px;
+  @media (max-width: 1200px) {
+    justify-content: space-around;
+  }
 }
 
 .person-card {
   width: 260px;
   margin: 0 15px;
+  @media (max-width: 1200px) {
+    width: 300px;
+    &:nth-child(1) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(2) {
+      margin-bottom: 30px;
+    }
+  }
+  @media (max-width: 733px) {
+    width: 260px;
+  }
+  @media (max-width: 644px) {
+    width: 300px;
+    &:nth-child(4) {
+      display: none;
+    }
+  }
+  @media (max-width: 420px) {
+    width: 260px;
+  }
+  @media (max-width: 320px) {
+    width: 240px;
+  }
 }
 .person__image {
-  width: 260px;
+  width: 100%;
   height: 175px;
   overflow: hidden;
   display: flex;
@@ -27,6 +54,10 @@
   font-weight: 700;
   margin-bottom: 5px;
   color: $dark-grey;
+
+  @media (max-width: 644px) {
+    text-align: center;
+  }
 }
 .person__subtitle {
   font-size: 1.12rem;
@@ -34,12 +65,23 @@
   text-transform: uppercase;
   margin-bottom: 17px;
   font-weight: 400;
+  @media (max-width: 644px) {
+    text-align: center;
+  }
 }
 .person__text {
   font-size: 1.12rem;
   color: $light-grey;
   font-weight: 400;
   margin-bottom: 37px;
+  @media (max-width: 644px) {
+    text-align: center;
+  }
+}
+.person__social-icons {
+  @media (max-width: 644px) {
+    text-align: center;
+  }
 }
 .person__social-icons i {
   width: 39px;
@@ -50,4 +92,7 @@
   color: $person-icons;
   border: 1px solid $person-icons;
   margin-right: 20px;
+  @media (max-width: 644px) {
+    margin: 0 10px;
+  }
 }
