--- a/src/scss/ready.scss
+++ b/src/scss/ready.scss
@@ -30,10 +30,42 @@
   background-color: $red;
   text-align: center;
   cursor: pointer;
+  @media (max-width: 762px) {
+    width: 300px;
+    padding: 15px 0;
+  }
+  @media (max-width: 598px) {
+    width: 280px;
+    padding: 15px 0;
+  }
+  @media (max-width: 468px) {
+    width: 260px;
+    padding: 15px 0;
+  }
+  @media (max-width: 422px) {
+    width: 240px;
+    padding: 10px 0;
+  }
+  @media (max-width: 350px) {
+    width: 230px;
+    padding: 10px 0;
+  }
 }
 .ready-button-download {
   text-transform: uppercase;
   color: $white;
   font-size: 1.5rem;
   font-weight: 900;
+  @media (max-width: 762px) {
+    font-size: 1.3rem;
+  }
+  @media (max-width: 598px) {
+    font-size: 1.2rem;
+  }
+  @media (max-width: 422px) {
+    font-size: 1.1rem;
+  }
+  @media (max-width: 350px) {
+    font-size: 1rem;
+  }
 }
