--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -46,20 +46,49 @@
   display: flex;
 }
 .slider__item img {
+  width: 50%;
+  @media (max-width: 785px) {
+    width: 100%;
+  }
 }
 .slider__description {
   background-color: $slider-odd;
-  width: auto;
+  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 7em;
+  padding: 0 110px;
+  @media (max-width: 1200px) {
+    padding: 0 80px;
+  }
+  @media (max-width: 1100px) {
+    padding: 0 60px;
+  }
+  @media (max-width: 1000px) {
+    padding: 0 50px;
+  }
+  @media (max-width: 992px) {
+    padding: 0 40px;
+  }
+  @media (max-width: 785px) {
+    display: none;
+  }
+
   p {
     font-size: 2.1rem;
     color: $white;
     font-family: "Cardo";
     font-weight: 400;
     text-transform: capitalize;
+    @media (max-width: 1120px) {
+      font-size: 1.9rem;
+    }
+    @media (max-width: 1020px) {
+      font-size: 1.7rem;
+    }
+    @media (max-width: 992px) {
+      font-size: 1.5rem;
+    }
   }
   span {
     display: block;
