--- a/src/scss/person.scss
+++ b/src/scss/person.scss
@@ -86,9 +86,9 @@
 .person__social-icons i {
   width: 39px;
   height: 39px;
-  padding-top: 0.5em;
+  padding-top: 10px;
   text-align: center;
-  font-size: 1.12rem;
+  font-size: 18px;
   color: $person-icons;
   border: 1px solid $person-icons;
   margin-right: 20px;
