--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -53,15 +53,10 @@
 }
 .upper-footer__social-icons {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 24px;
   color: $white;
   display: flex;
   justify-content: space-around;
-  @media (max-width: 992px) {
-    /* font-size: 1.3rem; */
-  }
-  @media (max-width: 800px) {
-  }
 }
 .upper-footer__social-icons a {
   color: $white;
@@ -72,10 +67,6 @@
   height: 39px;
   border: 1px solid $white;
   padding-top: 6px;
-  @media (max-width: 992px) {
-    /*    width: 32px;
-    height: 32px; */
-  }
 }
 
 .lower-footer {
