--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -39,7 +39,10 @@
 
 .slider {
   position: relative;
-  padding: 0 60px;
+  padding: 0 0;
+  @media (max-width: 785px) {
+    padding: 0 0;
+  }
 }
 
 .slider__item {
@@ -114,12 +117,14 @@
 
 .slider .slick-arrow.slick-prev {
   left: 0;
-  background: url("/img/arrows/chevron-left-solid.svg") 0 0 / 100% no-repeat;
+  background: url("../img/arrows/chevron-left-solid.svg") 0 0 / 100% no-repeat;
+  display: none;
 }
 
 .slick-arrow.slick-next {
   right: 0;
-  background: url("/img/arrows/chevron-right-solid.svg") 0 0 / 100% no-repeat;
+  background: url("../img/arrows/chevron-right-solid.svg") 0 0 / 100% no-repeat;
+  display: none;
 }
 
 .slider .slick-dots {
