--- a/css/style.css
+++ b/css/style.css
@@ -770,13 +770,21 @@ header::after {
 .slider .slick-arrow.slick-prev {
   left: 0;
   background: url("../img/arrows/chevron-left-solid.svg") 0 0/100% no-repeat;
-  display: none;
+}
+@media (max-width: 785px) {
+  .slider .slick-arrow.slick-prev {
+    display: none;
+  }
 }
 
 .slick-arrow.slick-next {
   right: 0;
   background: url("../img/arrows/chevron-right-solid.svg") 0 0/100% no-repeat;
-  display: none;
+}
+@media (max-width: 785px) {
+  .slick-arrow.slick-next {
+    display: none;
+  }
 }
 
 .slider .slick-dots {
