--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,32 @@ header::after {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 80px 30px;
+  padding: 60px 30px 0;
+}
+@media (max-width: 1200px) {
+  .portfolio__mask {
+    padding: 50px 20px 0;
+  }
+}
+@media (max-width: 1068px) {
+  .portfolio__mask {
+    padding: 40px 20px 0;
+  }
+}
+@media (max-width: 992px) {
+  .portfolio__mask {
+    padding: 60px 30px 0;
+  }
+}
+@media (max-width: 460px) {
+  .portfolio__mask {
+    padding: 100px 30px 0;
+  }
+}
+@media (max-width: 380px) {
+  .portfolio__mask {
+    padding: 60px 30px 0;
+  }
 }
 
 .portfolio__mask:hover {
@@ -473,21 +498,53 @@ header::after {
 .portfolio__mask__title {
   margin: auto;
   font-size: 1.5rem;
-  line-height: 2rem;
+  line-height: 1.7rem;
   color: transparent;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 }
 .portfolio__mask__title:hover {
   color: #ffffff;
   display: block;
 }
+@media (max-width: 1200px) {
+  .portfolio__mask__title {
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+  }
+}
+@media (max-width: 1068px) {
+  .portfolio__mask__title {
+    font-size: 1.3rem;
+    line-height: 1.4rem;
+  }
+}
+@media (max-width: 992px) {
+  .portfolio__mask__title {
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+  }
+}
+@media (max-width: 460px) {
+  .portfolio__mask__title {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 334px) {
+  .portfolio__mask__title {
+    font-size: 1.8rem;
+    line-height: 2rem;
+    margin-bottom: 50px;
+  }
+}
 
 .portfolio__mask__text {
   display: block;
-  font-size: 1.12rem;
-  line-height: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
   color: transparent;
   text-align: center;
   margin: auto;
@@ -495,6 +552,36 @@ header::after {
 .portfolio__mask__text:hover {
   color: #ffffff;
   display: block;
+}
+@media (max-width: 1200px) {
+  .portfolio__mask__text {
+    font-size: 1.1rem;
+    line-height: 1.2rem;
+  }
+}
+@media (max-width: 1068px) {
+  .portfolio__mask__text {
+    font-size: 1rem;
+    line-height: 1.1rem;
+  }
+}
+@media (max-width: 992px) {
+  .portfolio__mask__text {
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+  }
+}
+@media (max-width: 460px) {
+  .portfolio__mask__text {
+    font-size: 1.8rem;
+    line-height: 2rem;
+  }
+}
+@media (max-width: 352px) {
+  .portfolio__mask__text {
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+  }
 }
 
 .person-wrap {
