--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,3 +12,5 @@ $border-header: #babbc5;
 $slider-odd: #5c3249;
 $slider-even: #745968;
 $person-icons: #c6cbcd;
+$red-header: #e71414;
+$social-icons: rgb(20, 52, 192);
