--- a/css/style.css
+++ b/css/style.css
@@ -93,12 +93,28 @@ header::after {
   }
 }
 
+.header-navigation-list__item {
+  padding: 20px 10px;
+  border-bottom: 3px solid transparent;
+}
+.header-navigation-list__item:hover {
+  border-bottom: 3px solid #babbc5;
+}
+.header-navigation-list__item:active {
+  border-bottom: 3px solid #e71414;
+}
+
 .navigation__item {
   font-size: 0.8rem;
   line-height: 1rem;
   font-weight: 700;
   color: #ffffff;
   text-transform: uppercase;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.navigation__item:active {
+  color: #e71414;
 }
 
 .header-burger {
@@ -258,6 +274,13 @@ header::after {
   text-align: center;
   padding: 20px 0;
   background-color: #ff4343;
+}
+.first-screen-btn:hover {
+  background-color: #e71414;
+}
+.first-screen-btn:active {
+  -webkit-box-shadow: 4px 4px 30px 0px #ff4343;
+          box-shadow: 4px 4px 30px 0px #ff4343;
 }
 @media (max-width: 762px) {
   .first-screen-btn {
@@ -445,9 +468,18 @@ header::after {
   -webkit-transition: 1s;
   transition: 1s;
 }
-.portfolio__image img:hover {
+
+.portfolio-item:hover .portfolio__mask {
+  opacity: 0.8;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.portfolio-item:hover .portfolio__image img {
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
 }
 
 .portfolio__mask {
@@ -457,56 +489,29 @@ header::after {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 60px 30px 0;
-}
-@media (max-width: 1200px) {
-  .portfolio__mask {
-    padding: 50px 20px 0;
-  }
-}
-@media (max-width: 1068px) {
-  .portfolio__mask {
-    padding: 40px 20px 0;
-  }
-}
-@media (max-width: 992px) {
-  .portfolio__mask {
-    padding: 60px 30px 0;
-  }
-}
-@media (max-width: 460px) {
-  .portfolio__mask {
-    padding: 100px 30px 0;
-  }
-}
-@media (max-width: 380px) {
-  .portfolio__mask {
-    padding: 60px 30px 0;
-  }
-}
-
-.portfolio__mask:hover {
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  padding: 20px 20px;
   background-color: rgba(255, 67, 67, 0.7);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
 }
 
 .portfolio__mask__title {
   margin: auto;
   font-size: 1.5rem;
   line-height: 1.7rem;
-  color: transparent;
+  color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 35px;
-}
-.portfolio__mask__title:hover {
-  color: #ffffff;
-  display: block;
+  margin-bottom: 25px;
 }
 @media (max-width: 1200px) {
   .portfolio__mask__title {
@@ -545,13 +550,9 @@ header::after {
   display: block;
   font-size: 1.2rem;
   line-height: 1.4rem;
-  color: transparent;
+  color: #ffffff;
   text-align: center;
   margin: auto;
-}
-.portfolio__mask__text:hover {
-  color: #ffffff;
-  display: block;
 }
 @media (max-width: 1200px) {
   .portfolio__mask__text {
@@ -717,6 +718,9 @@ header::after {
   border: 1px solid #c6cbcd;
   margin-right: 20px;
 }
+.person__social-icons i:hover {
+  color: #1434c0;
+}
 @media (max-width: 644px) {
   .person__social-icons i {
     margin: 0 10px;
@@ -853,6 +857,11 @@ header::after {
   height: 60px;
   border: 0;
 }
+@media (max-width: 785px) {
+  .slider .slick-arrow {
+    display: none;
+  }
+}
 
 .slider .slick-arrow.slick-prev {
   left: 0;
@@ -935,6 +944,14 @@ header::after {
   background-color: #ff4343;
   text-align: center;
   cursor: pointer;
+}
+.ready-button:hover {
+  background-color: #e71414;
+}
+.ready-button:active {
+  background-color: #ff4343;
+  -webkit-box-shadow: 4px 4px 30px 0px #ff4343;
+          box-shadow: 4px 4px 30px 0px #ff4343;
 }
 @media (max-width: 762px) {
   .ready-button {
@@ -1079,6 +1096,9 @@ header::after {
 
 .upper-footer__social-icons a {
   color: #ffffff;
+}
+.upper-footer__social-icons a:hover {
+  color: #1434c0;
 }
 
 .upper-footer__social-icons i {
