--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -64,12 +64,28 @@ header {
     }
   }
 }
+.header-navigation-list__item {
+  padding: 20px 10px;
+  border-bottom: 3px solid transparent;
+  &:hover {
+    border-bottom: 3px solid $border-header;
+  }
+  &:active {
+    border-bottom: 3px solid $red-header;
+  }
+}
 .navigation__item {
   font-size: 0.8rem;
   line-height: 1rem;
   font-weight: 700;
   color: $white;
   text-transform: uppercase;
+
+  transition: 0.2s;
+
+  &:active {
+    color: $red-header;
+  }
 }
 
 .header-burger {
@@ -196,6 +212,13 @@ header {
   text-align: center;
   padding: 20px 0;
   background-color: $red;
+
+  &:hover {
+    background-color: $red-header;
+  }
+  &:active {
+    box-shadow: 4px 4px 30px 0px rgba(255, 67, 67, 1);
+  }
   @media (max-width: 762px) {
     width: 300px;
   }
