--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -58,10 +58,15 @@
   top: 0;
   left: 0;
   transition: 1s;
+}
 
-  &:hover {
-    transform: scale(1.3);
-  }
+.portfolio-item:hover .portfolio__mask {
+  opacity: 0.8;
+  transition: 0.5s ease;
+}
+.portfolio-item:hover .portfolio__image img {
+  transform: scale(1.3);
+  transition: 0.5s ease;
 }
 .portfolio__mask {
   display: block;
@@ -70,44 +75,23 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 60px 30px 0;
-  @media (max-width: 1200px) {
-    padding: 50px 20px 0;
-  }
-  @media (max-width: 1068px) {
-    padding: 40px 20px 0;
-  }
-  @media (max-width: 992px) {
-    padding: 60px 30px 0;
-  }
-  @media (max-width: 460px) {
-    padding: 100px 30px 0;
-  }
-  @media (max-width: 380px) {
-    padding: 60px 30px 0;
-  }
-}
-.portfolio__mask:hover {
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  padding: 20px 20px;
   background-color: rgba($color: #ff4343, $alpha: 0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
 }
+
 .portfolio__mask__title {
   margin: auto;
   font-size: 1.5rem;
   line-height: 1.7rem;
-  color: transparent;
+  color: $white;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 35px;
-  &:hover {
-    color: $white;
-    display: block;
-  }
+  margin-bottom: 25px;
+
   @media (max-width: 1200px) {
     font-size: 1.4rem;
     line-height: 1.5rem;
@@ -135,14 +119,10 @@
   display: block;
   font-size: 1.2rem;
   line-height: 1.4rem;
-  color: transparent;
-
+  color: $white;
   text-align: center;
   margin: auto;
-  &:hover {
-    color: $white;
-    display: block;
-  }
+
   @media (max-width: 1200px) {
     font-size: 1.1rem;
     line-height: 1.2rem;
