--- a/src/scss/ready.scss
+++ b/src/scss/ready.scss
@@ -30,6 +30,13 @@
   background-color: $red;
   text-align: center;
   cursor: pointer;
+  &:hover {
+    background-color: $red-header;
+  }
+  &:active {
+    background-color: $red;
+    box-shadow: 4px 4px 30px 0px rgba(255, 67, 67, 1);
+  }
   @media (max-width: 762px) {
     width: 300px;
     padding: 15px 0;
