--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -113,6 +113,9 @@
   width: 30px;
   height: 60px;
   border: 0;
+  @media (max-width: 785px) {
+    display: none;
+  }
 }
 
 .slider .slick-arrow.slick-prev {
